--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "db:migrate": "typeorm migration:run"
+    "db:migrate": "typeorm migration:run --dataSource data-source.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
