--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:migrate": "typeorm migration:run --dataSource data-source.ts"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
@@ -27,6 +28,7 @@
     "axios": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.0",
     "rxjs": "^7.8.0",
@@ -38,7 +40,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.0",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "@types/sqlite3": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -46,7 +48,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "supertest": "^6.0.0",
     "ts-jest": "^29.0.0",
